[package]
name = "hackernews_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
ureq = { version = "2.8.0", features = ["json"] }
url = "2.4.1"
tokio = { version = "1.33.0", features = ["full"]}
reqwest = { version = "0.11.22", features = ["json"] }

